users-api/templates/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: otus-microservices-k8s-deployment-service-ingress-users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment-users
  namespace: otus-microservices-k8s-deployment-service-ingress-users
  labels:
    app: k8s-deployment-service-ingress-users.webapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-deployment-service-ingress-users.webapi
  template:
    metadata:
      labels:
        app: k8s-deployment-service-ingress-users.webapi
    spec:
      containers:
      - name: k8s-deployment-service-ingress-webapi-users
        image: egorovsv85/otususerswebapplication:v22.0
        ports:
        - containerPort: 8000
