users-api/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi-service-users
  namespace: otus-microservices-k8s-deployment-service-ingress-users
  labels:
    app: k8s-deployment-service-ingress-users.webapi
spec:
  selector:
    app: k8s-deployment-service-ingress-users.webapi
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http-metrics
      port: 8801
      targetPort: 8000
